# NL1.12.6.2

./: Clion 安卓配置.txt  README.md  add2lin脚本.bat  build.gradle  output.csv  settings.gradle  发送文件.bat
app/: build.gradle  output.txt
app/src/main/: AndroidManifest.xml  AndroidManifest2.xml
app/src/main/assets/: items.json  splashes.json
app/src/main/assets/images/: ingame.images  items-opaque.tga  terrain-atlas.tga  terrain-atlas_mip0.tga  terrain-atlas_mip1.tga  terrain-atlas_mip2.tga  terrain-atlas_mip3.tga
app/src/main/assets/loc/: de_DE-pocket.lang  en_US-pocket.lang  es_ES-pocket.lang  es_MX-pocket.lang  fr_CA-pocket.lang  fr_FR-pocket.lang  it_IT-pocket.lang  ja_JP-pocket.lang  ko_KR-pocket.lang  languages.json  pt_BR-pocket.lang  pt_PT-pocket.lang  ru_RU-pocket.lang  zh_CN-pocket.lang  zh_TW-pocket.lang
app/src/main/assets/materials/: common.json  sad.json  (+4 more)
app/src/main/cpp/: CMakeLists.txt  controller_jni.cpp  dl_internal.h  dobby.cpp  dobby.h  dobby_public.h  early_workaround.c  fmod_filesystem.cpp  fmod_hdr.h  hurthook.h  log.h  logutil.h  marauders_map.c  mcpelauncher.h  minecraft_colors.h  modscript.cpp  modscript.h  modscript_LevelListener.hpp  modscript_cape.cpp  modscript_nextgen.cpp  modscript_renderer.cpp  modscript_renderer_jni.h  modscript_shared.h  modscript_structs.h  nativepatch.c  nativepatch.h  prepatch.cpp  signalhandler.cpp  signalhandler_arm.cpp  signalhandler_machine.h  signalhandler_x86.cpp  simpleuuid.c  simpleuuid.h  test.c  utf8proc.h  utf8proc_slim.c
app/src/main/cpp/json/: assertions.h  autolink.h  config.h  features.h  forwards.h  reader.h  value.h  writer.h
app/src/main/cpp/libcorkscrew/: Android.mk  backtrace-arch.h  backtrace-helper.c  backtrace-helper.h  backtrace.c  demangle.c  map_info.c  ptrace-arch.h  ptrace.c  symbol_table.c  test.cpp
app/src/main/cpp/libcorkscrew/arch-arm/: backtrace-arm.c  ptrace-arm.c
app/src/main/cpp/libcorkscrew/corkscrew/: backtrace.h  demangle.h  map_info.h  ptrace.h  symbol_table.h
app/src/main/cpp/mcpe/: appplatform.h  attribute.h  blocksource.h  blockstructs.h  circuit.h  compoundtag.h  controller.h  dimension.h  enchant.h  entitydamagesource.h  gamemode.h  i18n.h  inventory.h  itemrenderer.h  minecraft.h  mobeffect.h  mobfactory.h  options.h  packetsender.h  screenchooser.h  servercommandparser.h  synchedentitydata.h  util.h  weather.h
app/src/main/cpp/mcpe/blockentity/: blockentity.h  chestblockentity.h  furnaceblockentity.h  mobspawnerblockentity.h  signblockentity.h
app/src/main/cpp/mcpe/mce/: textureptr.h
gradle/wrapper/: gradle-wrapper.properties
脚本/: android.7z  factorization.build  factorization.build.format.js  list.txt1111  modpescript_dump.js  全部的名字列表按照字符长度排序.txt  格式化工具
资料/: bl.txt  libcomwp.so.h  libminecraftpe.so.h  minecraftpe.txt  output.xlsx  wp.txt  wrangle_entity_ids_from_pie.sh  带_符号.py
(+175 files in other folders)
